--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.1.3",
     "@types/node": "^14.14.41",
     "next": "^10.1.3",
     "react": "^17.0.2",
