Configured global themes and started on the header

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "paths": {
         "@components/*": ["components/*"],
         "@lib/*": ["lib/*"],
-        "@posts/*": ["posts/*"]
+        "@posts/*": ["posts/*"],
+        "@models/*": ["models/*"]
     }
   },
   "include": [
