Corrected the alias issue in VS Code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,6 +53,15 @@
         "import/resolver": {
             "node": {
                 "extensions": [".js", ".jsx", ".ts", ".tsx"]
+            },
+            "alias": {
+                "extensions": [".js", ".jsx", ".ts", ".tsx"],
+                "map": [
+                    ["@components", "./components"],
+                    ["@lib", "./lib"],
+                    ["@posts", "./posts"],
+                    ["@models", "./models"]
+                ]
             }
         }
     }
