--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,7 +60,8 @@
                     ["@components", "./components"],
                     ["@lib", "./lib"],
                     ["@posts", "./posts"],
-                    ["@models", "./models"]
+                    ["@models", "./models"],
+                    ["@data", "./data"]
                 ]
             }
         }
