--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
         "es2020": true,
         "jest": true
     },
-    "extends": ["plugin:react/recommended", "airbnb", "plugin:@typescript-eslint/recommended"],
+    "extends": ["plugin:react/recommended", "airbnb", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
@@ -13,7 +13,7 @@
         },
         "ecmaVersion": 11
     },
-    "plugins": ["react", "@typescript-eslint"],
+    "plugins": ["react", "@typescript-eslint", "prettier"],
     "rules": {
         "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
         "import/no-unresolved": 2,
