--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@next/mdx": "^11.0.1",
     "@types/node": "^14.14.41",
     "gray-matter": "^4.0.2",
+    "jsdom": "^16.6.0",
     "lodash": "^4.17.21",
+    "marked": "^2.1.3",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,7 +26,9 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@types/jsdom": "^16.2.13",
     "@types/lodash": "^4.14.168",
+    "@types/marked": "^2.0.4",
     "@types/react": "^17.0.3",
     "@types/styled-components": "^5.1.9",
     "@types/webfontloader": "^1.6.32",
