--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-paginate": "^7.1.3",
     "styled-components": "^5.2.3",
     "typescript": "^4.3.5",
     "webfontloader": "^1.6.28"
@@ -30,6 +31,7 @@
     "@types/lodash": "^4.14.168",
     "@types/marked": "^2.0.4",
     "@types/react": "^17.0.3",
+    "@types/react-paginate": "^7.1.1",
     "@types/styled-components": "^5.1.9",
     "@types/webfontloader": "^1.6.32",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
