--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/mdx": "^11.0.1",
     "@types/node": "^14.14.41",
     "dayjs": "^1.10.6",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.2",
     "jsdom": "^16.6.0",
     "lodash": "^4.17.21",
