--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prismjs": "^1.24.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-lightbox": "^5.1.4",
     "react-paginate": "^7.1.3",
     "styled-components": "^5.2.3",
     "typescript": "^4.3.5",
