--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,6 +50,7 @@
         "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/no-unused-vars-experimental": "error",
         "no-unused-vars": "off",
+        "react/jsx-one-expression-per-line": "off",
         "jsx-a11y/anchor-is-valid": [
             "error",
             {
