--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
             "@lib/*": ["lib/*"],
             "@posts/*": ["posts/*"],
             "@models/*": ["models/*"],
-            "@data/*": ["data/*"]
+            "@data/*": ["data/*"],
+            "@contexts/*": ["contexts/*"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
