--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "^11.1.2",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
