--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-paginate": "^7.1.3",
     "styled-components": "^5.2.3",
     "typescript": "^4.3.5",
+    "utf-8-validate": "^5.0.6",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
