--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "node-loader": "^2.0.0",
     "raw-loader": "^4.0.2",
     "swr": "^0.5.5"
   }
