--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/marked": "^2.0.4",
     "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.3",
+    "@types/react-dom": "^18.0.0",
     "@types/react-paginate": "^7.1.1",
     "@types/styled-components": "^5.1.9",
     "@types/webfontloader": "^1.6.32",
