--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "titleBar.activeBackground": "#101085",
         "titleBar.inactiveBackground": "#101085"
     },
-    "workbench.colorTheme": "Night Owl",
+    "workbench.colorTheme": "Cobalt2",
     "editor.tabSize": 4,
     "search.exclude": {
         "**/node_modules": true,
