--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-dom": "^17.0.2",
     "react-image-lightbox": "^5.1.4",
     "react-paginate": "^7.1.3",
-    "styled-components": "^5.2.3",
+    "styled-components": "^5.3.5",
     "typescript": "^4.3.5",
     "utf-8-validate": "^5.0.6",
     "webfontloader": "^1.6.28"
@@ -46,6 +46,7 @@
     "@types/webfontloader": "^1.6.32",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "^11.1.2",
