--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^14.14.41",
     "bufferutil": "^4.0.4",
     "dayjs": "^1.10.6",
+    "fast-xml-parser": "^4.0.9",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.2",
     "lodash": "^4.17.21",
