--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
             "@models/*": ["models/*"],
             "@data/*": ["data/*"],
             "@contexts/*": ["contexts/*"]
-        }
+        },
+        "incremental": true
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
     "exclude": ["node_modules"]
