--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "next",
-    "build": "next build && next export",
+    "build": "next build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -23,12 +23,12 @@
     "gray-matter": "^4.0.2",
     "lodash": "^4.17.21",
     "marked": "^2.1.3",
-    "next": "^11.1.4",
-    "next-mdx-remote": "^3.0.4",
+    "next": "^12.2.5",
+    "next-mdx-remote": "^4.1.0",
     "prism-themes": "^1.8.0",
     "prismjs": "^1.24.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-image-lightbox": "^5.1.4",
     "react-paginate": "^8.1.3",
     "styled-components": "^5.3.5",
@@ -41,7 +41,7 @@
     "@types/lodash": "^4.14.168",
     "@types/marked": "^2.0.4",
     "@types/prismjs": "^1.16.6",
-    "@types/react": "^17.0.3",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.0",
     "@types/react-paginate": "^7.1.1",
     "@types/styled-components": "^5.1.9",
