--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "next",
+    "start": "next -p 4000",
     "build": "next build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
