--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@code-hike/mdx": "^0.8.2-next.0",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^13.2.4",
     "@types/node": "^14.14.41",
@@ -25,12 +26,11 @@
     "marked": "^2.1.3",
     "next": "^13.2.4",
     "next-mdx-remote": "^4.4.1",
-    "prism-themes": "^1.8.0",
-    "prismjs": "^1.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-lightbox": "^5.1.4",
     "react-paginate": "^8.1.3",
+    "shiki": "^0.14.1",
     "typescript": "^4.3.5",
     "utf-8-validate": "^5.0.6",
     "webfontloader": "^1.6.28"
@@ -39,7 +39,6 @@
     "@types/jsdom": "^16.2.13",
     "@types/lodash": "^4.14.168",
     "@types/marked": "^2.0.4",
-    "@types/prismjs": "^1.16.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.0",
     "@types/react-paginate": "^7.1.1",
