--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@code-hike/mdx": "^0.8.2-next.0",
+    "@codesandbox/sandpack-react": "^2.6.0",
+    "@codesandbox/sandpack-themes": "^2.0.21",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^13.2.4",
     "@types/node": "^14.14.41",
