--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "next -p 4000",
-    "build": "next build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "next build"
   },
   "keywords": [],
   "author": "",
