--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@codesandbox/sandpack-themes": "^2.0.21",
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^13.2.4",
+    "@notionhq/client": "^2.2.5",
     "@types/node": "^14.14.41",
     "bufferutil": "^4.0.4",
     "dayjs": "^1.10.6",
