--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "marked": "^2.1.3",
     "next": "^13.2.4",
     "next-mdx-remote": "^4.4.1",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
@@ -41,6 +42,7 @@
     "@types/jsdom": "^16.2.13",
     "@types/lodash": "^4.14.168",
     "@types/marked": "^2.0.4",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.0",
     "@types/react-paginate": "^7.1.1",
