--- a/package.json
+++ b/package.json
@@ -12,53 +12,52 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@code-hike/mdx": "^0.8.2-next.0",
-    "@codesandbox/sandpack-react": "^2.6.0",
+    "@code-hike/mdx": "^0.9.0",
+    "@codesandbox/sandpack-react": "^2.7.1",
     "@codesandbox/sandpack-themes": "^2.0.21",
-    "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^13.2.4",
-    "@notionhq/client": "^2.2.5",
+    "@mdx-js/loader": "^2.3.0",
+    "@next/mdx": "^13.4.19",
+    "@notionhq/client": "^2.2.13",
     "@types/node": "^14.14.41",
-    "bufferutil": "^4.0.4",
+    "bufferutil": "^4.0.7",
     "dayjs": "^1.11.9",
-    "fast-xml-parser": "^4.0.9",
+    "fast-xml-parser": "^4.2.7",
     "feed": "^4.2.2",
-    "gray-matter": "^4.0.2",
+    "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
-    "marked": "^2.1.3",
-    "next": "^13.2.4",
+    "marked": "^9.0.1",
+    "next": "^13.4.19",
     "next-mdx-remote": "^4.4.1",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-paginate": "^8.1.3",
-    "shiki": "^0.14.1",
-    "typescript": "^4.3.5",
-    "utf-8-validate": "^5.0.6",
+    "react-paginate": "^8.2.0",
+    "shiki": "^0.14.4",
+    "typescript": "^5.2.2",
+    "utf-8-validate": "^6.0.3",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.36.0",
-    "@types/jsdom": "^16.2.13",
-    "@types/lodash": "^4.14.168",
-    "@types/marked": "^2.0.4",
+    "@netlify/plugin-nextjs": "^4.40.1",
+    "@types/jsdom": "^21.1.3",
+    "@types/lodash": "^4.14.198",
+    "@types/marked": "^5.0.1",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "@types/react-paginate": "^7.1.1",
-    "@types/webfontloader": "^1.6.32",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
-    "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-next": "^11.1.2",
+    "@types/webfontloader": "^1.6.35",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^13.4.19",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "raw-loader": "^4.0.2",
-    "swr": "^0.5.5"
+    "swr": "^2.2.2"
   }
 }
