--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,8 @@
         // Indent JSX with 4 spaces
         "react/jsx-indent": ["error", 4],
 
+        "react/function-component-definition": "off",
+
         "react/require-default-props": [0],
 
         // Indent props with 4 spaces
@@ -47,8 +49,7 @@
             "error",
             { "devDependencies": ["**/*.test.js", "**/*.test.jsx", "**/*.test.ts", "**/*.test.tsx", "**/*.d.ts", "**/test/*.js"] }
         ],
-        "@typescript-eslint/no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars-experimental": "error",
+        "@typescript-eslint/no-unused-vars": "error",
         "no-unused-vars": "off",
         "react/jsx-one-expression-per-line": "off",
         "jsx-a11y/anchor-is-valid": [
